--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://rsms.me/inter/inter.css');
 
 html,
 body {
   background-color: white;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Inter', sans-serif; 
+}
+
+.title-create{
+  padding-top: 3em;
+  padding-bottom: 1em;
+  font-size: 60px;
+}
+.margin-button{
+  margin-top: 2em;
 }
 
 a {
@@ -30,4 +39,8 @@ a {
 .users-box {
   width: 300px;
   height: 200px;
+}
+.center{
+  padding-top: 3em;;
+  align-items: center;
 }
