--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,3 +31,13 @@ a {
   width: 300px;
   height: 200px;
 }
+
+.card .specimen{
+  height: 350px;
+  width: 300px;
+  object-fit: cover;
+}
+.card .author {
+  border-bottom: 1px solid #000000;
+  padding-bottom: 10px;
+}
